--- a/.github/workflows/dast-scan.yml
+++ b/.github/workflows/dast-scan.yml
@@ -7,9 +7,10 @@ on:
     branches: [ main ]
 
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
+  actions: read
 
 jobs:
   zap-dast-scan:
@@ -102,31 +103,56 @@ jobs:
           ls -la zap_report/
 
       # -------------------------------
-      # Deploy HTML report to GitHub Pages
+      # Deploy HTML report to GitHub Pages (Primary Method)
       # -------------------------------
       - name: Deploy ZAP HTML report to GitHub Pages
         id: publish
         if: always()
+        continue-on-error: true
         uses: peaceiris/actions-gh-pages@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          personal_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./zap_report
           publish_branch: gh-pages
           force_orphan: true
           user_name: "github-actions[bot]"
           user_email: "github-actions[bot]@users.noreply.github.com"
           commit_message: "Deploy ZAP security scan report"
+          allow_empty_commit: true
+      
+      # -------------------------------
+      # Fallback: Upload as artifacts if GitHub Pages fails
+      # -------------------------------
+      - name: Upload ZAP Report as Artifact (Fallback)
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: zap-security-report
+          path: zap_report/
+          retention-days: 30
 
       # -------------------------------
-      # Set ZAP report URL as job output
+      # Report final status and access methods
       # -------------------------------
-      - name: Set ZAP report URL output
-        id: set-url
+      - name: Report ZAP Report Access Information
         if: always()
         run: |
           REPO_NAME=$(echo "$GITHUB_REPOSITORY" | cut -d'/' -f2)
           REPO_OWNER=$(echo "$GITHUB_REPOSITORY" | cut -d'/' -f1)
           REPORT_URL="https://${REPO_OWNER}.github.io/${REPO_NAME}/"
+          
+          echo "=== 📊 ZAP Security Scan Report Access ==="
+          echo "🔗 GitHub Pages URL: ${REPORT_URL}"
+          echo "📦 Workflow Run: https://github.com/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID"
+          echo ""
+          echo "📋 Access Methods:"
+          echo "1. 🌐 GitHub Pages: ${REPORT_URL} (may take 5-10 minutes to update)"
+          echo "2. 📁 Artifacts: Download from the workflow run link above"
+          echo "3. 🔍 Raw Files: Check the 'zap_report' folder in this workflow run"
+          echo ""
+          echo "⚠️  Note: If you're using a forked repository, GitHub Pages might have restricted permissions."
+          echo "📥 In that case, download the artifact from the workflow run page."
+          
+          # Set output for other jobs/steps
           echo "zap_report_url=${REPORT_URL}" >> $GITHUB_OUTPUT
-          echo "📊 ZAP Security Report will be available at: ${REPORT_URL}"
-          echo "🔧 Note: It may take a few minutes for GitHub Pages to update after deployment"
+          echo "workflow_url=https://github.com/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID" >> $GITHUB_OUTPUT
